--- a/main.ipynb
+++ b/main.ipynb
@@ -1596,6 +1596,21 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**Reflexiones sobre la Experiencia Reciente en el Curso**\n",
+        "\n",
+        "Las semanas recientes han traído consigo una notable transición en el curso, ofreciendo una experiencia distintiva en comparación con sus etapas iniciales. Al tener tiempo de clase para realizar los laboratorios, hemos sentido el curso más dinámico. Esta restructuración nos ha permitido distribuir nuestro tiempo de manera más efectiva, no solo para este curso sino también para nuestros otros compromisos académicos.  Además podemos resolver nuestras dudas de clase lo que nos facilita más el desarrollo de los problemas. No obstante algunos laboratorios han sido algo complejos y requieren más de los tres periodos de clase. Es por ello agreadeceríamos tener más tiempo o recalcular la complejidad de los problemas para poer terminarlos durante clase. \n",
+        "\n",
+        "**Opinión y Reflexiones sobre AutoGluon**\n",
+        "\n",
+        "AutoGluon, una herramienta de \"AutoML\", se presenta como un recurso intuitivo y accesible, facilitando el desarrollo de modelos de machine learning de manera más directa y sin requerir un profundo conocimiento técnico previo. La sencillez con la que permite crear modelos es notablemente valiosa para desarrollos rápidos y sencillos.\n",
+        "\n",
+        "No obstante, hemos encontrado algunos inconvenientes notables. Primero AutoGluon solo esta dispoble para versiones muy antiguas de python, esto ocasiono que se nos dificultara instalarlo, limitando su accesibilidad y comodidad de uso. Además, en situaciones donde los problemas a resolver escalan en complejidad, como este, el tiempo de ejecución y el costo computacional demostraron ser muuy altos. Como se muestra la imagen siguiente, esperamos basante tiempo para la ejecución del programa, lo que nos llevó a buscar alternativas como Google Colab para poder ejecutar nuestros modelos."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 4,
       "metadata": {},
