--- a/main.ipynb
+++ b/main.ipynb
@@ -1607,7 +1607,11 @@
         "\n",
         "AutoGluon, una herramienta de \"AutoML\", se presenta como un recurso intuitivo y accesible, facilitando el desarrollo de modelos de machine learning de manera más directa y sin requerir un profundo conocimiento técnico previo. La sencillez con la que permite crear modelos es notablemente valiosa para desarrollos rápidos y sencillos.\n",
         "\n",
-        "No obstante, hemos encontrado algunos inconvenientes notables. Primero AutoGluon solo esta dispoble para versiones muy antiguas de python, esto ocasiono que se nos dificultara instalarlo, limitando su accesibilidad y comodidad de uso. Además, en situaciones donde los problemas a resolver escalan en complejidad, como este, el tiempo de ejecución y el costo computacional demostraron ser muuy altos. Como se muestra la imagen siguiente, esperamos basante tiempo para la ejecución del programa, lo que nos llevó a buscar alternativas como Google Colab para poder ejecutar nuestros modelos."
+        "En realidad, permite crear varios modelos de manera rápida y sencilla, lo que permite evaluar varios modelos y escoger el mejor. Asimismo, permite evaluar el modelo con el conjunto de datos de prueba, lo que permite evaluar el rendimiento del modelo de manera rápida y sencilla.\n",
+        "\n",
+        "No obstante, hemos encontrado algunos inconvenientes notables. Primero AutoGluon solo esta dispoble para versiones muy antiguas de python, esto ocasiono que se nos dificultara instalarlo, limitando su accesibilidad y comodidad de uso. Además, en situaciones donde los problemas a resolver escalan en complejidad, como este, el tiempo de ejecución y el costo computacional demostraron ser muuy altos. Como se muestra la imagen siguiente, esperamos basante tiempo para la ejecución del programa, lo que nos llevó a buscar alternativas como Google Colab para poder ejecutar nuestros modelos.\n",
+        "\n",
+        "Finalmente, creemos que este tipo de herramientas son muy útiles para desarrollar modelos de manera rápida y sencilla. Sin embargo, no son herramientas que se puedan utilizar en todos los casos. En situaciones específicas, se requiere un mayor control sobre el modelo, lo que no es necesariamente posible con AutoGluon."
       ]
     },
     {
